product placeholders for ecommerce home 'explore' page

--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,9 @@
         <section id='home-view'>
         </section>
 
+        <section id='search-view' class='hidden'>
+        </section>
+
         <section id='account-view' class='hidden'>
         </section>
 
