view switches working, account login behavior mostly done, added a toggle to remember username function :), changed login endpoint in API to post

--- a/public/index.html
+++ b/public/index.html
@@ -48,17 +48,22 @@
         </section>
 
         <section id='search-view' class='hidden'>
-          <p>search-view</p>
+          <p>Search Results:</p>
         </section>
 
         <section id='account-view' class='hidden'>
           <h2>Login</h2>
+          <p id = 'incorrect-message' class = 'hidden'>Incorrect password or username!</p>
           <form id='login-form'>
             <label for='login-username'>Username</label>
             <input type='text' id='login-username' name='login-username' required>
             <label for='login-password'>Password</label>
             <input type='text' id='login-password' name='login-password' required>
           </form>
+          <button id='submit-account-btn'>Submit!</button>
+          <br>
+          <label for="save-user-toggle">Toggle to remember your username</label>
+          <input type="checkbox" id="save-user-toggle"/>
           <h2>Sign Up</h2>
           <form id='signup-form'>
             <label for='signup-username'>Username</label>
@@ -66,7 +71,7 @@
             <label for='signup-password'>Password</label>
             <input type='text' id='signup-password' name='signup-password' required>
           </form>
-          <button id='submit-account-btn'>Submit!</button>
+
           <button>Login</button>
           <button>Sign Up</button>
         </section>
@@ -89,7 +94,7 @@
             <button>Submit!</button>
           </form>
         </section>
-
+      </article>
     </main>
   </body>
 </html>
