added feature for switching between cozy and compact, and the product name link bringing to product view feature

--- a/public/index.html
+++ b/public/index.html
@@ -43,8 +43,7 @@
       <article id='ecommerce-data'>
         <section id='home-view'>
           <h2>Explore Products:</h2>
-          <article id='product-container'>
-          </article>
+          <button id='change-home-view-btn'>Click to toggle between cozy and compact view</button>
         </section>
 
         <section id='search-view' class='hidden'>
@@ -84,6 +83,10 @@
 
         <section id='history-view' class='hidden'>
           <p>history-view</p>
+        </section>
+
+        <section id='product-view' class='hidden'>
+          <p>product-view</p>
         </section>
 
         <section id='cart-view' class='hidden'>
