--- a/public/index.html
+++ b/public/index.html
@@ -20,15 +20,6 @@
   <body>
     <header>
       <article id='search-bar'>
-        <form>
-          <select name='filter-term'>
-            <option value='all'>All</option>
-            <option value='pants'>Pants</option>
-            <option value='shirts'>Shirts</option>
-            <option value='coats'>Coats</option>
-            <option value='coats'>Electronics</option>
-          </select>
-        </form>
         <input id='search-term' type='text'>
         <button id='search-btn' disabled>search</button>
       </article>
@@ -43,12 +34,34 @@
     <main>
       <article id='ecommerce-data'>
         <section id='home-view'>
+          <form>
+            <select name='filter-term'>
+              <option value='all'>All</option>
+              <option value='pants'>Pants</option>
+              <option value='shirts'>Shirts</option>
+              <option value='coats'>Coats</option>
+              <option value='coats'>Electronics</option>
+            </select>
+          </form>
           <h2>Explore Products:</h2>
-          <button id='change-home-view-btn'>Click to toggle between cozy and compact view</button>
+          <button id='change-home-view-btn'>Cozy/compact view</button>
         </section>
 
         <section id='search-view' class='hidden'>
-          <p>Search Results:</p>
+          <form>
+            <select name='filter-term'>
+              <option value='all'>All</option>
+              <option value='pants'>Pants</option>
+              <option value='shirts'>Shirts</option>
+              <option value='coats'>Coats</option>
+              <option value='coats'>Electronics</option>
+            </select>
+          </form>
+          <h2>Search Results:</h2>
+          <button id='change-search-view-btn'>Cozy/compact view</button>
+
+          <section id='result-container'>
+          </section>
         </section>
 
         <section id='login-view' class='hidden'>
@@ -72,7 +85,6 @@
             <input type='text' id='signup-password' name='signup-password' required>
           </form>
 
-          <button id='login'>Login</button>
           <button id='signup'>Sign Up</button>
         </section>
 
@@ -83,7 +95,11 @@
         </section>
 
         <section id='history-view' class='hidden'>
-          <p>history-view</p>
+          <p>Your Order History:</p>
+        </section>
+
+        <section id='history-not-logged-view' class='hidden'>
+          <p>Please log in first to use this functionality!</p>
         </section>
 
         <section id='product-view' class='hidden'>
@@ -92,6 +108,10 @@
 
         <section id='cart-view' class='hidden'>
           <p>cart-view</p>
+        </section>
+
+        <section id='cart-not-logged-view' class='hidden'>
+          <p>Please log in first to use this functionality!</p>
         </section>
 
         <section id='feedback-view' class='hidden'>
