commented everything, added product view

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
   Name: Justin Yang, Jerry Huang
   Date: 12/1/2021
   Section: CSE 154 AD - Dylan
-  Description:
+  Description: Our HTML code for the structuring of our ecommerce website.
 -->
 
 <!DOCTYPE HTML>
@@ -103,7 +103,7 @@
         </section>
 
         <section id='product-view' class='hidden'>
-          <p>product-view</p>
+          <p>Product:</p>
         </section>
 
         <section id='cart-view' class='hidden'>
