lazy commit to pull code

--- a/public/index.html
+++ b/public/index.html
@@ -85,24 +85,21 @@
         <section id='history-view' class='hidden'>
         </section>
 
-        <section id='product-view' class='hidden'>
-          <p>product-view</p>
-        </section>
-
         <section id='cart-view' class='hidden'>
           <p>cart-view</p>
         </section>
 
-        <section id='feedback-view' class='hidden'>
-          <h2>Give us Feedback:</h2>
-          <form>
-            <label for='name'>Name</label>
-            <input type='text' id='name' name='name' required>
-            <label for='feedback-input'>What feedback do you have?</label>
-            <input type='text' id='feedback-input' name='full' required>
+        <section id='item-view' class='hidden'>
+          <button id='back-btn'>Go back!</button>
+          <form id='feedback-form'>
+            <label for='rating'>Rating</label>
+            <input type='text' id='rating' name='rating' required>
+            <label for='review'>What feedback do you have?</label>
+            <input type='text' id='review' name='review' required>
             <button>Submit!</button>
           </form>
         </section>
+
       </article>
     </main>
   </body>
