--- a/public/index.html
+++ b/public/index.html
@@ -112,25 +112,21 @@
 
         <section id='item-view' class='hidden'>
           <button id='back-btn'>Go back!</button>
-          <form id='feedback-form'>
-            <label for='rating'>Rating</label>
-            <input type='text' id='rating' name='rating' required>
-            <label for='review'>What feedback do you have?</label>
-            <input type='text' id='review' name='review' required>
+          <article id='item-section'>
+            <p>Reviews</p>
+            <form id='feedback-form' class='hidden'>
+              <label for='rating'>Rating</label>
+              <input type='text' id='rating' name='rating' required>
+              <label for='review'>What feedback do you have?</label>
+              <input type='text' id='review' name='review' required>
+              <button>Submit Feedback!</button>
+            </form>
+          </article>
+
+        </section>
 
         <section id='cart-not-logged-view' class='hidden'>
           <p>Please log in first to use this functionality!</p>
-        </section>
-
-        <section id='feedback-view' class='hidden'>
-          <h2>Give us Feedback:</h2>
-          <form>
-            <label for='name'>Name</label>
-            <input type='text' id='name' name='name' required>
-            <label for='feedback-input'>What feedback do you have?</label>
-            <input type='text' id='feedback-input' name='full' required>
-            <button>Submit!</button>
-          </form>
         </section>
 
       </article>
