style changes, all functionalities working now

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <header>
       <article id='search-bar'>
         <input id='search-term' type='text'>
-        <button id='search-btn' disabled>search</button>
+        <button id='search-btn' disabled>Search</button>
       </article>
       <nav>
         <button id='home-btn'>Home</button>
@@ -96,6 +96,8 @@
 
         <section id='history-view' class='hidden'>
           <p>Your Order History:</p>
+          <section id='history-section'>
+          </section>
         </section>
 
         <section id='history-not-logged-view' class='hidden'>
