--- a/public/index.html
+++ b/public/index.html
@@ -107,7 +107,6 @@
         </section>
 
         <section id='cart-view' class='hidden'>
-          <p>cart-view</p>
         </section>
 
         <section id='item-view' class='hidden'>
@@ -121,8 +120,11 @@
             <input type='text' id='rating' name='rating' required>
             <label for='review'>What feedback do you have?</label>
             <input type='text' id='review' name='review' required>
-            <button>Submit Feedback!</button>
+            <button id='feedback-btn'>Submit Feedback!</button>
           </form>
+
+          <article id='review-section'>
+          </article>
 
         </section>
 
