started fixing CSS errors

--- a/public/index.html
+++ b/public/index.html
@@ -115,7 +115,7 @@
           </article>
 
 
-          <form id='feedback-form' class='hidden'>
+          <form id='feedback-form' class='hidden feedback-form-hidden'>
             <label for='rating'>Rating</label>
             <input type='text' id='rating' name='rating' required>
             <label for='review'>What feedback do you have?</label>
