fixing HTML errors

--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
 
         <section id='login-view' class='hidden'>
           <h2>Login</h2>
-          <p id = 'incorrect-message' class = 'hidden'>Incorrect password or username!</p>
+          <p id='incorrect-message' class='hidden'>Incorrect password or username!</p>
           <form id='login-form'>
             <label for='login-username'>Username</label>
             <input type='text' id='login-username' name='login-username' required>
@@ -74,7 +74,7 @@
           <button id='submit-account-btn'>Submit!</button>
           <br>
           <label for="save-user-toggle">Toggle to remember your username</label>
-          <input type="checkbox" id="save-user-toggle"/>
+          <input type="checkbox" id="save-user-toggle">
           <h2>Sign Up</h2>
           <form id='signup-form'>
             <label for='signup-username'>Username</label>
