fixing index.js

--- a/public/index.html
+++ b/public/index.html
@@ -81,6 +81,8 @@
             <input type='text' id='signup-username' name='signup-username' required>
             <label for='signup-password'>Password</label>
             <input type='text' id='signup-password' name='signup-password' required>
+            <label for='signup-email'>E-Mail</label>
+            <input type='text' id='signup-email' name='signup-email' required>
           </form>
 
           <button id='signup'>Sign Up</button>
